src/objects/Project_Construction_Stages__c.object
<CustomObject>
    <fields>
        <fullName>Actual_date_of_completion__c</fullName>
        <label>Actual date of completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Est_Date_of_Construction_Stage_Completio__c</fullName>
        <label>Est Date of Construction Stage Completio</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_date_of_completion__c</fullName>
        <label>Planned date of completion</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Project_Id__c</fullName>
        <label>Project Id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipName>Project_Construction_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Remarks__c</fullName>
        <label>Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Sequence_No__c</fullName>
        <label>Sequence No</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tower__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup the tower that this particular construction stage belongs to</description>
        <label>Tower</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Tower__c.ProjectName__c</field>
                <operation>equals</operation>
                <valueField>$Source.Project__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Tower__c</referenceTo>
        <relationshipName>Project_Construction_Stages</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Unique_Project_Code__c</fullName>
        <label>Unique Project/Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Project_Description__c</fullName>
        <label>Unique Project Description</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Unique_Sequence_No__c</fullName>
        <label>Unique Sequence No</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Construction Schedule</label>
    <nameField>
        <label>Project Construction Stages Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Construction Stages</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Est_Date_completetion_validation</fullName>
        <active>true</active>
        <errorConditionFormula>OR(Est_Date_of_Construction_Stage_Completio__c &lt;TODAY(),  Est_Date_of_Construction_Stage_Completio__c &lt; Project__r.Start_Date__c )</errorConditionFormula>
        <errorMessage>Should not be less than today date or Project start date.</errorMessage>
    </validationRules>
</CustomObject>